--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "deploy:main": "cross-env NODE_ENV=main npx hardhat run ./scripts/deploy.ts --network mainnet",
     "deploy:test": "cross-env NODE_ENV=test npx hardhat run ./scripts/deploy.ts --network testnet",
-    "test": "cross-env NODE_ENV=test npx hardhat test --network testnet"
+    "test": "npx hardhat test",
+    "prettier": "prettier --write 'contracts/**/*.sol'"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,8 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.3.1",
     "@openzeppelin/contracts-upgradeable": "^4.3.2",
-    "@openzeppelin/hardhat-upgrades": "^1.10.0",
     "@openzeppelin/hardhat-defender": "^1.6.0",
+    "@openzeppelin/hardhat-upgrades": "^1.10.0",
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.21",
@@ -35,6 +36,8 @@
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "chai": "^4.3.4",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
@@ -45,11 +48,11 @@
     "hardhat": "^2.6.4",
     "hardhat-contract-sizer": "^2.1.1",
     "hardhat-gas-reporter": "^1.0.4",
+    "prettier": "^2.6.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solc": "^0.8.2",
     "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
-    "typescript": "^4.4.3",
-    "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
-    "solc": "^0.8.2"
+    "typescript": "^4.4.3"
   }
 }
