--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "deploy:main": "cross-env NODE_ENV=main npx hardhat run ./scripts/deploy.ts --network mainnet",
     "deploy:test": "cross-env NODE_ENV=test npx hardhat run ./scripts/deploy.ts --network testnet",
+    "upgrade:main": "cross-env NODE_ENV=main npx hardhat run ./scripts/upgradeMaticX.ts --network mainnet",
+    "verify:main": "cross-env NODE_ENV=main npx hardhat verifyMaticX --network mainnet",
     "test": "npx hardhat test",
     "prettier": "prettier --write 'contracts/**/*.sol'"
   },
@@ -47,7 +49,7 @@
     "ethers": "^5.4.6",
     "hardhat": "^2.6.4",
     "hardhat-contract-sizer": "^2.5.1",
-    "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-gas-reporter": "^1.0.8",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solc": "^0.8.2",
