--- a/.env.test.example
+++ b/.env.test.example
@@ -9,5 +9,8 @@ MATIC_TOKEN=
 MANAGER=
 INSTANT_POOL_OWNER=
 TREASURY=
+FX_ROOT=
+FX_CHILD=
+CHECKPOINT_MANAGER=
 DEFENDER_TEAM_API_KEY=
 DEFENDER_TEAM_API_SECRET_KEY=
