added linting files

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
+  "printWidth": 80,
+  "tabWidth": 4,
+  "useTabs": true,
+  "singleQuote": false,
+  "bracketSpacing": true,
+  "explicitTypes": "always",
   "overrides": [
     {
       "files": "*.sol",
