Fix linter issues

--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "MaticX",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "deploy:main": "cross-env NODE_ENV=main npx hardhat run ./scripts/deploy.ts --network mainnet",
-    "deploy:test": "cross-env NODE_ENV=test npx hardhat run ./scripts/deploy.ts --network testnet",
-    "upgrade:main": "cross-env NODE_ENV=main npx hardhat run ./scripts/upgradeMaticX.ts --network mainnet",
-    "verify:main": "cross-env NODE_ENV=main npx hardhat verifyMaticX --network mainnet",
-    "compile": "hardhat compile",
-    "test": "hardhat test",
+    "format": "npm run prettier-sol && npm run prettier-ts",
     "prettier-sol": "prettier --write 'contracts/**/*.sol'",
     "prettier-ts": "prettier --write 'scripts/**/*.ts' 'test/**/*.ts'",
-    "lint": "eslint --ext .js,.ts ."
+    "lint": "eslint --ext .js,.ts --fix .",
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "deploy:main": "cross-env NODE_ENV=main hardhat run ./scripts/deploy.ts --network mainnet",
+    "deploy:test": "cross-env NODE_ENV=test hardhat run ./scripts/deploy.ts --network testnet",
+    "upgrade:main": "cross-env NODE_ENV=main hardhat run ./scripts/upgradeMaticX.ts --network mainnet",
+    "verify:main": "cross-env NODE_ENV=main hardhat verifyMaticX --network mainnet"
   },
   "repository": {
     "type": "git",
@@ -45,12 +45,12 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.6",
     "hardhat": "^2.6.4",
