--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,10 @@
+.idea/
 .openzeppelin/
+.vscode/
 artifacts/
 cache/
-contracts/
 coverage/
 crytic-corpus/
 crytic-export/
 node_modules/
-typechain/
+typechain-types/
