--- a/package.json
+++ b/package.json
@@ -1,66 +1,70 @@
 {
-  "name": "MaticX",
-  "version": "0.1.0",
-  "description": "",
-  "scripts": {
-    "format": "npm run prettier-sol && npm run prettier-ts",
-    "prettier-sol": "prettier --write 'contracts/**/*.sol'",
-    "prettier-ts": "prettier --write 'scripts/**/*.ts' 'test/**/*.ts'",
-    "lint": "eslint --ext .js,.ts --fix .",
-    "compile": "hardhat compile",
-    "test": "hardhat test",
-    "deploy:main": "cross-env NODE_ENV=main hardhat run ./scripts/deploy.ts --network mainnet",
-    "deploy:test": "cross-env NODE_ENV=test hardhat run ./scripts/deploy.ts --network testnet",
-    "upgrade:main": "cross-env NODE_ENV=main hardhat run ./scripts/upgradeMaticX.ts --network mainnet",
-    "verify:main": "cross-env NODE_ENV=main hardhat verifyMaticX --network mainnet"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/stader-labs/maticX"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/stader-labs/maticX/issues"
-  },
-  "homepage": "https://github.com/stader-labs/maticX#readme",
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.6",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.3.1",
-    "@openzeppelin/contracts-upgradeable": "^4.3.2",
-    "@openzeppelin/hardhat-defender": "^1.6.0",
-    "@openzeppelin/hardhat-upgrades": "^1.10.0",
-    "@typechain/ethers-v5": "^7.0.1",
-    "@typechain/hardhat": "^2.3.0",
-    "@types/chai": "^4.2.21",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.9.1",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "chai": "^4.3.4",
-    "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.4.6",
-    "hardhat": "^2.6.4",
-    "hardhat-contract-sizer": "^2.5.1",
-    "hardhat-gas-reporter": "^1.0.8",
-    "prettier": "^2.6.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "solc": "^0.8.2",
-    "ts-node": "^10.2.1",
-    "typechain": "^5.1.2",
-    "typescript": "^4.4.3"
-  }
+	"name": "MaticX",
+	"version": "0.1.0",
+	"description": "MaticX contracts",
+	"scripts": {
+		"format": "npm run prettier-sol && npm run prettier-ts",
+		"prettier-sol": "prettier --write 'contracts/**/*.sol'",
+		"prettier-ts": "prettier --write 'scripts/**/*.ts' 'test/**/*.ts'",
+		"lint": "eslint --ext .js,.ts .",
+		"compile": "hardhat compile",
+		"test": "hardhat test",
+		"deploy:main": "cross-env NODE_ENV=main hardhat run ./scripts/deploy.ts --network mainnet",
+		"deploy:test": "cross-env NODE_ENV=test hardhat run ./scripts/deploy.ts --network testnet",
+		"upgrade:main": "cross-env NODE_ENV=main hardhat run ./scripts/upgradeMaticX.ts --network mainnet",
+		"verify:main": "cross-env NODE_ENV=main hardhat verifyMaticX --network mainnet"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/stader-labs/maticX"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/stader-labs/maticX/issues"
+	},
+	"homepage": "https://github.com/stader-labs/maticX#readme",
+	"engines": {
+		"node": "16"
+	},
+  "type": "commonjs",
+	"devDependencies": {
+		"@nomiclabs/hardhat-ethers": "^2.0.2",
+		"@nomiclabs/hardhat-etherscan": "^2.1.6",
+		"@nomiclabs/hardhat-waffle": "^2.0.1",
+		"@openzeppelin/contracts": "^4.3.1",
+		"@openzeppelin/contracts-upgradeable": "^4.3.2",
+		"@openzeppelin/hardhat-defender": "^1.6.0",
+		"@openzeppelin/hardhat-upgrades": "^1.10.0",
+		"@typechain/ethers-v5": "^7.0.1",
+		"@typechain/hardhat": "^2.3.0",
+		"@types/chai": "^4.2.21",
+		"@types/mocha": "^9.0.0",
+		"@types/node": "^16.9.1",
+		"@typescript-eslint/eslint-plugin": "^4.32.0",
+		"@typescript-eslint/parser": "^4.32.0",
+		"chai": "^4.3.4",
+		"cross-env": "^7.0.3",
+		"dotenv": "^10.0.0",
+		"eslint": "^7.32.0",
+		"eslint-config-google": "^0.14.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-standard": "^16.0.3",
+		"eslint-plugin-import": "^2.24.2",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-promise": "^5.1.0",
+		"ethereum-waffle": "^3.4.0",
+		"ethers": "^5.4.6",
+		"hardhat": "^2.6.4",
+		"hardhat-contract-sizer": "^2.5.1",
+		"hardhat-gas-reporter": "^1.0.8",
+		"prettier": "^2.6.2",
+		"prettier-plugin-solidity": "^1.0.0-beta.19",
+		"solc": "^0.8.2",
+		"ts-node": "^10.2.1",
+		"typechain": "^5.1.2",
+		"typescript": "^4.4.3"
+	}
 }
