--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
 		"compile": "hardhat compile",
 		"check": "hardhat check",
 		"test": "hardhat test --bail",
+		"test:ci": "hardhat test --parallel",
+		"analyze": "slitherin . --separated",
+		"analyze:ci": "slitherin --separated . --skip-clean --ignore-compile",
 		"node": "hardat node",
 		"deploy:main": "cross-env NODE_ENV=main hardhat run ./scripts/deploy.ts --network mainnet",
 		"deploy:test": "cross-env NODE_ENV=test hardhat run ./scripts/deploy.ts --network testnet",
