--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
 		"check": "hardhat check",
 		"test": "hardhat test --bail",
 		"test:ci": "hardhat test --parallel",
-		"analyze": "slitherin . --separated",
+		"analyze": "slitherin . --slither",
 		"analyze:ci": "slitherin --separated . --skip-clean --ignore-compile",
+		"clean": "hardhat clean",
 		"node": "hardat node",
 		"deploy:main": "cross-env NODE_ENV=main hardhat run ./scripts/deploy.ts --network mainnet",
 		"deploy:test": "cross-env NODE_ENV=test hardhat run ./scripts/deploy.ts --network testnet",
