Upgrade node packages

--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
 	"description": "MaticX contracts",
 	"scripts": {
 		"prepare": "husky",
-		"format": "npm run prettier-sol && npm run prettier-ts",
-		"prettier-sol": "prettier --write 'contracts/**/*.sol'",
-		"prettier-ts": "prettier --write 'scripts/**/*.ts' 'test/**/*.ts'",
+		"format:sol": "prettier --write 'contracts/**/*.sol'",
+		"format:ts": "prettier --write 'scripts/**/*.ts' 'test/**/*.ts'",
 		"lint": "eslint --ext .js,.ts .",
 		"compile": "hardhat compile",
 		"check": "hardhat check",
@@ -71,7 +70,7 @@
 		"hardhat-gas-reporter": "^1.0.8",
 		"husky": "^9.1.5",
 		"prettier": "^2.6.2",
-		"prettier-plugin-solidity": "^1.0.0-beta.19",
+		"prettier-plugin-solidity": "^1.4.1",
 		"solc": "^0.8.2",
 		"solhint": "^5.0.3",
 		"ts-node": "^10.2.1",
