--- a/.prettierrc
+++ b/.prettierrc
@@ -3,19 +3,19 @@
 	"tabWidth": 4,
 	"useTabs": true,
 	"singleQuote": false,
-	"bracketSpacing": true,
-	"explicitTypes": "always",
+	"semi": true,
+    "quoteProps": "as-needed",
+    "trailingComma": "es5",
+    "bracketSpacing": true,
+    "arrowParens": "always",
 	"overrides": [
 		{
 			"files": "*.sol",
 			"options": {
-				"printWidth": 80,
-				"tabWidth": 4,
-				"useTabs": true,
-				"singleQuote": false,
-				"bracketSpacing": true,
-				"explicitTypes": "always"
+				"parser": "solidity-parse",
+				"printWidth": 80
 			}
 		}
-	]
+	],
+	"plugins": ["prettier-plugin-solidity"]
 }
