Add coverage support

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
 		"check": "hardhat check",
 		"test": "hardhat test --bail",
 		"test:ci": "hardhat test --parallel",
+		"cover": "rimraf coverage && hardhat coverage",
 		"gas": "cross-env REPORT_GAS=1 npm run test",
 		"analyze": "slitherin . --slither",
 		"analyze:ci": "slitherin --separated . --skip-clean --ignore-compile",
-		"clean": "hardhat clean",
+		"clean": "hardhat clean && rimraf coverage cache crytic-{corpus,export} mochaOutput.json testMatrix.json",
 		"node": "hardat node",
 		"deploy:main": "cross-env NODE_ENV=main hardhat run ./scripts/deploy.ts --network mainnet",
 		"deploy:test": "cross-env NODE_ENV=test hardhat run ./scripts/deploy.ts --network testnet",
@@ -72,8 +73,10 @@
 		"husky": "^9.1.5",
 		"prettier": "^2.6.2",
 		"prettier-plugin-solidity": "^1.4.1",
+		"rimraf": "^6.0.1",
 		"solc": "^0.8.2",
 		"solhint": "^5.0.3",
+		"solidity-coverage": "^0.8.13",
 		"ts-node": "^10.2.1",
 		"typechain": "^5.1.2",
 		"typescript": "^4.4.3"
