--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"hardhat-contract-sizer": "^2.5.1",
 		"hardhat-gas-reporter": "^2.2.1",
 		"husky": "^9.1.5",
+		"joi": "^17.13.3",
 		"prettier": "^3.3.3",
 		"prettier-plugin-solidity": "^1.4.1",
 		"rimraf": "^6.0.1",
