--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	},
 	"type": "commonjs",
 	"devDependencies": {
+		"@nomicfoundation/hardhat-network-helpers": "^1.0.11",
 		"@nomiclabs/hardhat-ethers": "^2.0.2",
 		"@nomiclabs/hardhat-etherscan": "^3.1.8",
 		"@nomiclabs/hardhat-solhint": "^4.0.0",
