--- a/slither.config.json
+++ b/slither.config.json
@@ -1,6 +1,6 @@
 {
     "compile_force_framework": "hardhat",
-    "detectors_to_exclude": "calls-loop,constable-states,naming-convention,pragma,reentrancy-benign,reentrancy-events,reentrancy-no-eth,solc-version,unused-return",
+    "detectors_to_exclude": "calls-loop,constable-states,naming-convention,pragma,solc-version,unused-return",
     "include_paths": "(MaticX.sol)",
     "filter_paths": "(@openzeppelin/|lib/|mocks/|state-transfer/|tunnel/)"
 }
