Reformat source code of some contracts, scripts and tests

--- a/.prettierignore
+++ b/.prettierignore
@@ -3,6 +3,8 @@
 .vscode/
 artifacts/
 cache/
+contracts/ChildPool.sol
+contracts/interfaces/IChildPool.sol
 coverage/
 crytic-corpus/
 crytic-export/
