--- a/package.json
+++ b/package.json
@@ -38,18 +38,20 @@
 		"npm": ">=10.2.0"
 	},
 	"type": "commonjs",
+	"dependencies": {
+		"@openzeppelin/contracts": "^4.9.6",
+		"@openzeppelin/contracts-upgradeable": "^4.9.6"
+	},
 	"devDependencies": {
 		"@nomicfoundation/hardhat-network-helpers": "^1.0.11",
 		"@nomiclabs/hardhat-ethers": "^2.0.2",
 		"@nomiclabs/hardhat-etherscan": "^3.1.8",
 		"@nomiclabs/hardhat-solhint": "^4.0.0",
 		"@nomiclabs/hardhat-waffle": "^2.0.1",
-		"@openzeppelin/contracts": "^4.3.1",
-		"@openzeppelin/contracts-upgradeable": "^4.3.2",
 		"@openzeppelin/hardhat-defender": "^1.6.0",
 		"@openzeppelin/hardhat-upgrades": "^1.10.0",
-		"@typechain/ethers-v5": "^8.0.5",
-		"@typechain/hardhat": "^3.1.0",
+		"@typechain/ethers-v5": "^11.1.2",
+		"@typechain/hardhat": "^7.0.0",
 		"@types/chai": "^4.2.21",
 		"@types/mocha": "^10.0.7",
 		"@types/node": "^22.5.4",
@@ -67,7 +69,7 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^5.1.0",
 		"ethereum-waffle": "^4.0.10",
-		"ethers": "^5.4.6",
+		"ethers": "^5.7.2",
 		"hardhat": "^2.6.4",
 		"hardhat-contract-sizer": "^2.5.1",
 		"hardhat-gas-reporter": "^2.2.1",
@@ -76,13 +78,13 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-solidity": "^1.4.1",
 		"rimraf": "^6.0.1",
-		"solc": "^0.8.27",
+		"solc": "^0.8.7",
 		"solhint": "^5.0.3",
 		"solhint-community": "^4.0.0",
 		"solhint-plugin-prettier": "^0.1.0",
 		"solidity-coverage": "^0.8.13",
 		"ts-node": "^10.2.1",
-		"typechain": "^6.1.0",
+		"typechain": "^8.3.2",
 		"typescript": "^5.5.4"
 	}
 }
