--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "MaticX contracts",
 	"scripts": {
 		"prepare": "husky",
-		"format": "prettier --write 'contracts/**/*.sol' 'scripts/**/*.ts' 'test/**/*.ts'",
-		"lint": "eslint --ext .js,.ts .",
+		"format": "prettier --write .",
+		"lint": "eslint .",
 		"compile": "hardhat compile",
 		"check": "hardhat check",
 		"test": "hardhat test --bail",
@@ -53,21 +53,15 @@
 		"@typechain/ethers-v5": "^11.1.2",
 		"@typechain/hardhat": "^7.0.0",
 		"@types/chai": "^4.2.21",
+		"@types/eslint__js": "^8.42.3",
 		"@types/mocha": "^10.0.7",
 		"@types/node": "^22.5.4",
-		"@typescript-eslint/eslint-plugin": "^4.32.0",
-		"@typescript-eslint/parser": "^4.32.0",
 		"chai": "^4.3.4",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.4.5",
-		"eslint": "^7.32.0",
-		"eslint-config-google": "^0.14.0",
+		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-config-standard": "^16.0.3",
-		"eslint-plugin-import": "^2.24.2",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-promise": "^5.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
 		"ethereum-waffle": "^4.0.10",
 		"ethers": "^5.7.2",
 		"hardhat": "^2.6.4",
@@ -85,6 +79,7 @@
 		"solidity-coverage": "^0.8.13",
 		"ts-node": "^10.2.1",
 		"typechain": "^8.3.2",
-		"typescript": "^5.5.4"
+		"typescript": "^5.5.4",
+		"typescript-eslint": "^8.7.0"
 	}
 }
