Update prettier configuration

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"lint": "eslint .",
 		"compile": "hardhat compile",
 		"check": "hardhat check",
-		"test": "hardhat test --bail",
-		"test:ci": "hardhat test --parallel",
+		"test": "hardhat test --typecheck --bail",
+		"test:ci": "hardhat test --typecheck --parallel",
 		"cover": "rimraf coverage && hardhat coverage",
 		"gas": "cross-env REPORT_GAS=true npm run test",
 		"size": "hardhat size-contracts",
