--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"cover": "rimraf coverage && hardhat coverage",
 		"gas": "cross-env REPORT_GAS=true npm run test",
 		"size": "hardhat size-contracts",
-		"analyze": "slither .",
-		"analyze:ci": "slither . --skip-clean --ignore-compile",
+		"analyze": "slitherin .",
+		"analyze:ci": "slitherin . --skip-clean --ignore-compile",
 		"clean": "hardhat clean && rimraf coverage cache crytic-{corpus,export} mochaOutput.json testMatrix.json",
 		"node": "hardat node",
 		"deploy:main": "cross-env NODE_ENV=main hardhat run ./scripts/deploy.ts --network mainnet",
