--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"analyze:ci": "slitherin . --skip-clean --ignore-compile",
 		"clean": "hardhat clean && rimraf coverage cache crytic-{corpus,export} mochaOutput.json testMatrix.json",
 		"node": "hardat node",
+		"analyze-mythril:matic-x": "myth analyze contracts/MaticX.sol --solc-json solc.json",
+		"analyze-mythril:validator-registry": "myth analyze contracts/ValidatorRegistry.sol --solc-json solc.json",
 		"deploy:main": "cross-env NODE_ENV=main hardhat run ./scripts/deploy.ts --network mainnet",
 		"deploy:test": "cross-env NODE_ENV=test hardhat run ./scripts/deploy.ts --network testnet",
 		"upgrade:main": "cross-env NODE_ENV=main hardhat run ./scripts/upgradeMaticX.ts --network mainnet",
