Add support for amoy and polygon networks

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ OZ_DEFENDER_API_SECRET=1234567890ABCDEF1234567890abcde1234567890ABCDEF1234567890
 FORKING_BLOCK_NUMBER=20700204
 COINMARKETCAP_API_KEY=aaaaaaaa-bbbb-cccc-dddd-ef0123456789
 GAS_REPORTER_NETWORK=ethereum
+GAS_PRICE_GWEI=0
+REPORT_GAS=false
 DEPLOYER_MNEMONIC="test test test test test test test test test test test junk"
 DEPLOYER_PASSPHRASE=
 DEPLOYER_ADDRESS=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
