Update hardhat configuration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-API_PROVIDER=ankr
+RPC_PROVIDER=ankr
 HOLESKY_API_KEY=1234567890ABCDEF1234567890abcdef
 AMOY_API_KEY=1234567890ABCDEF1234567890abcdef
 ETHEREUM_API_KEY=1234567890ABCDEF1234567890abcdef
