--- a/package.json
+++ b/package.json
@@ -11,16 +11,12 @@
 		"test": "hardhat test --typecheck --bail",
 		"test:ci": "hardhat test --typecheck --parallel",
 		"cover": "rimraf coverage && hardhat coverage",
-		"gas": "cross-env REPORT_GAS=true npm run test",
+		"gas": "REPORT_GAS=true npm run test",
 		"size": "hardhat size-contracts",
-		"clean": "hardhat clean && rimraf coverage cache crytic-{corpus,export} mochaOutput.json testMatrix.json",
+		"clean": "hardhat clean && rm -rf coverage cache crytic-{corpus,export} mochaOutput.json testMatrix.json",
 		"node": "hardat node",
 		"analyze": "slitherin .",
-		"analyze:ci": "slitherin . --skip-clean --ignore-compile",
-		"deploy:main": "cross-env NODE_ENV=main hardhat run ./scripts/deploy.ts --network mainnet",
-		"deploy:test": "cross-env NODE_ENV=test hardhat run ./scripts/deploy.ts --network testnet",
-		"upgrade:main": "cross-env NODE_ENV=main hardhat run ./scripts/upgradeMaticX.ts --network mainnet",
-		"verify:main": "cross-env NODE_ENV=main hardhat verifyMaticX --network mainnet"
+		"analyze:ci": "slitherin . --skip-clean --ignore-compile"
 	},
 	"repository": {
 		"type": "git",
@@ -43,42 +39,24 @@
 		"@openzeppelin/contracts-upgradeable": "^4.9.6"
 	},
 	"devDependencies": {
-		"@nomicfoundation/hardhat-network-helpers": "^1.0.11",
-		"@nomicfoundation/hardhat-verify": "^2.0.11",
-		"@nomiclabs/hardhat-ethers": "^2.0.2",
+		"@nomicfoundation/hardhat-toolbox": "^2.0.2",
 		"@nomiclabs/hardhat-solhint": "^4.0.0",
-		"@nomiclabs/hardhat-waffle": "^2.0.1",
 		"@openzeppelin/hardhat-defender": "^1.6.0",
 		"@openzeppelin/hardhat-upgrades": "^1.10.0",
-		"@typechain/ethers-v5": "^11.1.2",
-		"@typechain/hardhat": "^7.0.0",
-		"@types/chai": "^4.2.21",
 		"@types/eslint__js": "^8.42.3",
-		"@types/mocha": "^10.0.7",
-		"@types/node": "^22.5.4",
-		"chai": "^4.3.4",
-		"cross-env": "^7.0.3",
 		"dotenv": "^16.4.5",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
-		"ethereum-waffle": "^4.0.10",
-		"ethers": "^5.7.2",
 		"hardhat": "^2.6.4",
 		"hardhat-contract-sizer": "^2.5.1",
-		"hardhat-gas-reporter": "^2.2.1",
 		"husky": "^9.1.5",
 		"joi": "^17.13.3",
 		"prettier": "^3.3.3",
 		"prettier-plugin-solidity": "^1.4.1",
-		"rimraf": "^6.0.1",
-		"solc": "^0.8.7",
 		"solhint": "^5.0.3",
 		"solhint-community": "^4.0.0",
 		"solhint-plugin-prettier": "^0.1.0",
-		"solidity-coverage": "^0.8.13",
-		"ts-node": "^10.2.1",
-		"typechain": "^8.3.2",
 		"typescript": "^5.5.4",
 		"typescript-eslint": "^8.7.0"
 	}
