Update contract structure

--- a/.solhintignore
+++ b/.solhintignore
@@ -1,15 +1,14 @@
-.idea
-.openzeppelin
-.vscode
+.idea/
+.openzeppelin/
+.vscode/
 artifacts/
 cache/
 coverage/
 contracts/ChildPool.sol
 contracts/interfaces/IChildPool.sol
-contracts/lib
-contracts/mocks
-contracts/state-transfer
-contracts/tunnel
+contracts/libraries/
+contracts/mocks/
+contracts/state-transfer/
 crytic-corpus/
 crytic-export/
 node_modules/
