--- a/slither.config.json
+++ b/slither.config.json
@@ -1,6 +1,6 @@
 {
 	"compile_force_framework": "hardhat",
 	"detectors_to_exclude": "calls-loop,incorrect-equality,naming-convention,pragma,solc-version,unused-return,unused-state",
-	"include_paths": "(MaticX.sol|ValidatorRegistry.sol)",
-	"filter_paths": "(@openzeppelin/|libraries/|mocks/|state-transfer/)"
+	"include_paths": "(FxStateChildTunnel.sol|FxStateRootTunnel.sol|MaticX.sol|ValidatorRegistry.sol)",
+	"filter_paths": "(@openzeppelin/|libraries/|mocks/)"
 }
