--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
 	"description": "MaticX contracts",
 	"scripts": {
 		"prepare": "husky",
-		"format": "prettier --write .",
+		"format": "prettier --check .",
+		"format:fix": "prettier --write .",
 		"lint": "eslint .",
+		"lint:fix": "eslint --fix .",
 		"compile": "hardhat compile",
 		"check": "hardhat check",
 		"test": "hardhat test --typecheck --bail",
@@ -24,7 +26,7 @@
 	},
 	"keywords": [],
 	"author": "",
-	"license": "ISC",
+	"license": "BUSL-1.1",
 	"bugs": {
 		"url": "https://github.com/stader-labs/maticX/issues"
 	},
