--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,49 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.6
-aiosignal==1.3.1
-attrs==24.2.0
-bitarray==2.9.2
-cbor2==5.6.4
-certifi==2024.8.30
-charset-normalizer==3.3.2
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+attrs==24.3.0
+bitarray==3.0.0
+cbor2==5.6.5
+certifi==2024.12.14
+charset-normalizer==3.4.1
 ckzg==1.0.2
 crytic-compile==0.3.7
-cytoolz==0.12.3
+cytoolz==1.0.1
 eth-account==0.11.3
 eth-hash==0.7.0
 eth-keyfile==0.8.1
-eth-keys==0.5.1
+eth-keys==0.6.0
 eth-rlp==1.0.1
 eth-typing==4.4.0
 eth-utils==4.1.1
 eth_abi==5.1.0
-frozenlist==1.4.1
+frozenlist==1.5.0
 hexbytes==0.3.1
 idna==3.10
 jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
+jsonschema-specifications==2024.10.1
 lru-dict==1.2.0
 multidict==6.1.0
-packaging==24.1
+packaging==24.2
 parsimonious==0.10.0
-prettytable==3.11.0
-protobuf==5.28.2
-pycryptodome==3.20.0
+prettytable==3.12.0
+propcache==0.2.1
+protobuf==5.29.3
+pycryptodome==3.21.0
 pyunormalize==16.0.0
 referencing==0.35.1
-regex==2024.9.11
+regex==2024.11.6
 requests==2.32.3
 rlp==4.0.1
-rpds-py==0.20.0
+rpds-py==0.22.3
+setuptools==75.8.0
 slither-analyzer==0.10.4
 slitherin==0.7.2
 solc-select==1.0.4
-toolz==0.12.1
+toolz==1.0.0
 typing_extensions==4.12.2
-urllib3==2.2.3
+urllib3==2.3.0
 wcwidth==0.2.13
 web3==6.20.3
-websockets==13.1
-yarl==1.12.1
+websockets==14.1
+yarl==1.18.3
